--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -59,10 +59,6 @@
       "plugin": "users-permissions",
       "configurable": false
     },
-    "object": {
-      "via": "users_permissions_user",
-      "model": "object"
-    },
     "name": {
       "type": "string",
       "required": true
@@ -82,6 +78,14 @@
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
+    },
+    "objects": {
+      "via": "users_permissions_user",
+      "collection": "object"
+    },
+    "profile": {
+      "via": "users_permissions_user",
+      "model": "profile"
     }
   }
 }
