--- a/api/object/models/object.settings.json
+++ b/api/object/models/object.settings.json
@@ -87,6 +87,10 @@
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
+    },
+    "products": {
+      "via": "object",
+      "collection": "product"
     }
   }
 }
