--- a/api/product/models/product.settings.json
+++ b/api/product/models/product.settings.json
@@ -2,12 +2,13 @@
   "kind": "collectionType",
   "collectionName": "products",
   "info": {
-    "name": "Product"
+    "name": "Product",
+    "description": ""
   },
   "options": {
     "increments": true,
     "timestamps": true,
-    "draftAndPublish": true
+    "draftAndPublish": false
   },
   "pluginOptions": {},
   "attributes": {
@@ -44,6 +45,14 @@
       "type": "component",
       "repeatable": true,
       "component": "array.price"
+    },
+    "object": {
+      "model": "object",
+      "via": "products"
+    },
+    "visible": {
+      "type": "boolean",
+      "default": true
     }
   }
 }
