--- a/api/object/models/object.settings.json
+++ b/api/object/models/object.settings.json
@@ -91,6 +91,10 @@
     "products": {
       "via": "object",
       "collection": "product"
+    },
+    "packages": {
+      "via": "object",
+      "collection": "package"
     }
   }
 }
