--- a/api/product/models/product.settings.json
+++ b/api/product/models/product.settings.json
@@ -41,11 +41,6 @@
       "required": true,
       "pluginOptions": {}
     },
-    "prices": {
-      "type": "component",
-      "repeatable": true,
-      "component": "array.price"
-    },
     "object": {
       "model": "object",
       "via": "products"
@@ -53,6 +48,12 @@
     "visible": {
       "type": "boolean",
       "default": true
+    },
+    "category": {
+      "type": "string"
+    },
+    "prices": {
+      "type": "json"
     }
   }
 }
