--- a/api/order/models/order.settings.json
+++ b/api/order/models/order.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "orders",
   "info": {
-    "name": "Order"
+    "name": "Order",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -14,6 +15,35 @@
     "items": {
       "type": "json",
       "required": true
+    },
+    "resi": {
+      "type": "string"
+    },
+    "ongkir": {
+      "type": "integer"
+    },
+    "konfirmasi": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
+    },
+    "status": {
+      "type": "enumeration",
+      "enum": [
+        "paid",
+        "unpaid",
+        "waiting",
+        "success",
+        "sent",
+        "canceled"
+      ]
     }
   }
 }
