--- a/api/product/models/product.settings.json
+++ b/api/product/models/product.settings.json
@@ -42,8 +42,8 @@
       "pluginOptions": {}
     },
     "object": {
-      "model": "object",
-      "via": "products"
+      "via": "products",
+      "model": "object"
     },
     "visible": {
       "type": "boolean",
