--- a/api/package/models/package.settings.json
+++ b/api/package/models/package.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "packages",
   "info": {
-    "name": "Package"
+    "name": "Package",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -19,11 +20,14 @@
       "type": "text"
     },
     "object": {
-      "model": "object",
-      "via": "packages"
+      "via": "packages",
+      "model": "object"
     },
-    "harga": {
+    "price": {
       "type": "json"
+    },
+    "content": {
+      "type": "richtext"
     }
   }
 }
