--- a/api/room/models/room.settings.json
+++ b/api/room/models/room.settings.json
@@ -36,6 +36,10 @@
     },
     "available": {
       "type": "date"
+    },
+    "bookings": {
+      "via": "room",
+      "collection": "booking"
     }
   }
 }
