--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@strapi/provider-email-sendmail": "^4.0.7",
     "knex": "0.21.18",
     "pg": "8.5.1",
     "slugify": "^1.6.1",
